// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`frodo config-manager pulls "frodo config-manager pull saml -f test/e2e/fr-config-manager-pull-config/saml.json -D testDir22": should export the saml based on salm-config.json file in fr-config-manager style" 1`] = `0`;

exports[`frodo config-manager pulls "frodo config-manager pull saml -f test/e2e/fr-config-manager-pull-config/saml.json -D testDir22": should export the saml based on salm-config.json file in fr-config-manager style" 2`] = `""`;

exports[`frodo config-manager pulls "frodo config-manager pull saml -f test/e2e/fr-config-manager-pull-config/saml.json -D testDir22": should export the saml based on salm-config.json file in fr-config-manager style": testDir22/realms/alpha/realm-config/saml/COT/AzureCOT.json 1`] = `
{
  "_id": "AzureCOT",
  "_rev": "-954827061",
  "_type": {
    "_id": "circlesoftrust",
    "collection": true,
    "name": "Circle of Trust",
  },
  "status": "active",
  "trustedProviders": [
    "iSPAzure|saml2",
    "urn:federation:MicrosoftOnline|saml2",
    "https://sts.windows.net/711ffa9c-5972-4713-ace3-688c9732614a/|saml2",
    "SPAzure|saml2",
    "https://idc.scheuber.io/am/saml2/IDPAzure|saml2",
  ],
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull saml -f test/e2e/fr-config-manager-pull-config/saml.json -D testDir22": should export the saml based on salm-config.json file in fr-config-manager style": testDir22/realms/alpha/realm-config/saml/COT/affiliation-test.json 1`] = `
{
  "_id": "affiliation-test",
  "_rev": "838041851",
  "_type": {
    "_id": "circlesoftrust",
    "collection": true,
    "name": "Circle of Trust",
  },
  "status": "active",
  "trustedProviders": [],
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull saml -f test/e2e/fr-config-manager-pull-config/saml.json -D testDir22": should export the saml based on salm-config.json file in fr-config-manager style": testDir22/realms/alpha/realm-config/saml/hosted/iSPAzure.json 1`] = `
{
  "config": {
    "_id": "aVNQQXp1cmU",
    "_rev": "-1533212691",
    "entityId": "iSPAzure",
    "serviceProvider": {
      "advanced": {
        "ecpConfiguration": {
          "ecpRequestIdpListFinderImpl": "com.sun.identity.saml2.plugins.ECPIDPFinder",
        },
        "idpProxy": {},
        "relayStateUrlList": {},
        "saeConfiguration": {
          "spUrl": "\${TENANT_BASE_URL}/spsaehandler/metaAlias/alpha/iSPAzure",
        },
      },
      "assertionContent": {
        "assertionTimeSkew": 300,
        "authenticationContext": {
          "authContextItems": [
            {
              "contextReference": "urn:oasis:names:tc:SAML:2.0:ac:classes:PasswordProtectedTransport",
              "defaultItem": true,
              "level": 0,
            },
          ],
          "authenticationComparisonType": "Exact",
          "authenticationContextMapper": "com.sun.identity.saml2.plugins.DefaultSPAuthnContextMapper",
          "includeRequestedAuthenticationContext": true,
        },
        "basicAuthentication": {},
        "clientAuthentication": {},
        "nameIdFormat": {
          "nameIdFormatList": [
            "urn:oasis:names:tc:SAML:2.0:nameid-format:persistent",
            "urn:oasis:names:tc:SAML:2.0:nameid-format:transient",
            "urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddress",
            "urn:oasis:names:tc:SAML:1.1:nameid-format:unspecified",
            "urn:oasis:names:tc:SAML:1.1:nameid-format:WindowsDomainQualifiedName",
            "urn:oasis:names:tc:SAML:2.0:nameid-format:kerberos",
            "urn:oasis:names:tc:SAML:1.1:nameid-format:X509SubjectName",
          ],
        },
        "signingAndEncryption": {
          "encryption": {},
          "requestResponseSigning": {},
          "secretIdAndAlgorithms": {},
        },
      },
      "assertionProcessing": {
        "accountMapping": {
          "spAccountMapper": "com.sun.identity.saml2.plugins.DefaultSPAccountMapper",
          "useNameIDAsSPUserID": true,
        },
        "adapter": {},
        "attributeMapper": {
          "attributeMap": [
            {
              "key": "http://schemas.microsoft.com/identity/claims/displayname",
              "value": "cn",
            },
            {
              "key": "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/givenname",
              "value": "givenName",
            },
            {
              "key": "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/surname",
              "value": "sn",
            },
            {
              "key": "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/emailaddress",
              "value": "mail",
            },
            {
              "key": "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/name",
              "value": "uid",
            },
          ],
          "attributeMapper": "com.sun.identity.saml2.plugins.DefaultSPAttributeMapper",
        },
        "autoFederation": {
          "autoFedEnabled": false,
        },
        "responseArtifactMessageEncoding": {
          "encoding": "URI",
        },
        "url": {},
      },
      "services": {
        "metaAlias": "/alpha/iSPAzure",
        "serviceAttributes": {
          "assertionConsumerService": [
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Artifact",
              "index": 0,
              "isDefault": true,
              "location": "\${TENANT_BASE_URL}/AuthConsumer/metaAlias/alpha/iSPAzure",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST",
              "index": 1,
              "isDefault": false,
              "location": "\${TENANT_BASE_URL}/AuthConsumer/metaAlias/alpha/iSPAzure",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:PAOS",
              "index": 2,
              "isDefault": false,
              "location": "\${TENANT_BASE_URL}/Consumer/ECP/metaAlias/alpha/iSPAzure",
            },
          ],
          "nameIdService": [
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect",
              "location": "\${TENANT_BASE_URL}/SPMniRedirect/metaAlias/alpha/iSPAzure",
              "responseLocation": "\${TENANT_BASE_URL}/SPMniRedirect/metaAlias/alpha/iSPAzure",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST",
              "location": "\${TENANT_BASE_URL}/SPMniPOST/metaAlias/alpha/iSPAzure",
              "responseLocation": "\${TENANT_BASE_URL}/SPMniPOST/metaAlias/alpha/iSPAzure",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:SOAP",
              "location": "\${TENANT_BASE_URL}/SPMniSoap/metaAlias/alpha/iSPAzure",
              "responseLocation": "\${TENANT_BASE_URL}/SPMniSoap/metaAlias/alpha/iSPAzure",
            },
          ],
          "singleLogoutService": [
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect",
              "location": "\${TENANT_BASE_URL}/SPSloRedirect/metaAlias/alpha/iSPAzure",
              "responseLocation": "\${TENANT_BASE_URL}/SPSloRedirect/metaAlias/alpha/iSPAzure",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST",
              "location": "\${TENANT_BASE_URL}/SPSloPOST/metaAlias/alpha/iSPAzure",
              "responseLocation": "\${TENANT_BASE_URL}/SPSloPOST/metaAlias/alpha/iSPAzure",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:SOAP",
              "location": "\${TENANT_BASE_URL}/SPSloSoap/metaAlias/alpha/iSPAzure",
            },
          ],
        },
      },
    },
  },
  "metadata": "<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
<EntityDescriptor entityID="iSPAzure" xmlns="urn:oasis:names:tc:SAML:2.0:metadata" xmlns:query="urn:oasis:names:tc:SAML:metadata:ext:query" xmlns:mdattr="urn:oasis:names:tc:SAML:metadata:attribute" xmlns:saml="urn:oasis:names:tc:SAML:2.0:assertion" xmlns:xenc="http://www.w3.org/2001/04/xmlenc#" xmlns:xenc11="http://www.w3.org/2009/xmlenc11#" xmlns:alg="urn:oasis:names:tc:SAML:metadata:algsupport" xmlns:x509qry="urn:oasis:names:tc:SAML:metadata:X509:query" xmlns:ds="http://www.w3.org/2000/09/xmldsig#">
    <SPSSODescriptor protocolSupportEnumeration="urn:oasis:names:tc:SAML:2.0:protocol">
        <KeyDescriptor use="signing">
            <ds:KeyInfo>
                <ds:X509Data>
                    <ds:X509Certificate>PGNlcnRpZmljYXRlPg==</ds:X509Certificate>
                </ds:X509Data>
            </ds:KeyInfo>
        </KeyDescriptor>
        <KeyDescriptor use="encryption">
            <ds:KeyInfo>
                <ds:X509Data>
                    <ds:X509Certificate>PGNlcnRpZmljYXRlPg==</ds:X509Certificate>
                </ds:X509Data>
            </ds:KeyInfo>
            <EncryptionMethod Algorithm="http://www.w3.org/2001/04/xmlenc#rsa-oaep-mgf1p">
                <ds:DigestMethod Algorithm="http://www.w3.org/2001/04/xmlenc#sha256"/>
            </EncryptionMethod>
            <EncryptionMethod Algorithm="http://www.w3.org/2001/04/xmlenc#aes128-cbc">
                <xenc:KeySize>128</xenc:KeySize>
            </EncryptionMethod>
        </KeyDescriptor>
        <SingleLogoutService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect" Location="https://idc.scheuber.io/am/SPSloRedirect/metaAlias/alpha/iSPAzure" ResponseLocation="https://idc.scheuber.io/am/SPSloRedirect/metaAlias/alpha/iSPAzure"/>
        <SingleLogoutService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST" Location="https://idc.scheuber.io/am/SPSloPOST/metaAlias/alpha/iSPAzure" ResponseLocation="https://idc.scheuber.io/am/SPSloPOST/metaAlias/alpha/iSPAzure"/>
        <SingleLogoutService Binding="urn:oasis:names:tc:SAML:2.0:bindings:SOAP" Location="https://idc.scheuber.io/am/SPSloSoap/metaAlias/alpha/iSPAzure"/>
        <ManageNameIDService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect" Location="https://idc.scheuber.io/am/SPMniRedirect/metaAlias/alpha/iSPAzure" ResponseLocation="https://idc.scheuber.io/am/SPMniRedirect/metaAlias/alpha/iSPAzure"/>
        <ManageNameIDService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST" Location="https://idc.scheuber.io/am/SPMniPOST/metaAlias/alpha/iSPAzure" ResponseLocation="https://idc.scheuber.io/am/SPMniPOST/metaAlias/alpha/iSPAzure"/>
        <ManageNameIDService Binding="urn:oasis:names:tc:SAML:2.0:bindings:SOAP" Location="https://idc.scheuber.io/am/SPMniSoap/metaAlias/alpha/iSPAzure" ResponseLocation="https://idc.scheuber.io/am/SPMniSoap/metaAlias/alpha/iSPAzure"/>
        <NameIDFormat>urn:oasis:names:tc:SAML:2.0:nameid-format:persistent</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:2.0:nameid-format:transient</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddress</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:1.1:nameid-format:unspecified</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:1.1:nameid-format:WindowsDomainQualifiedName</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:2.0:nameid-format:kerberos</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:1.1:nameid-format:X509SubjectName</NameIDFormat>
        <AssertionConsumerService index="0" isDefault="true" Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Artifact" Location="https://idc.scheuber.io/am/AuthConsumer/metaAlias/alpha/iSPAzure"/>
        <AssertionConsumerService index="1" isDefault="false" Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST" Location="https://idc.scheuber.io/am/AuthConsumer/metaAlias/alpha/iSPAzure"/>
        <AssertionConsumerService index="2" isDefault="false" Binding="urn:oasis:names:tc:SAML:2.0:bindings:PAOS" Location="https://idc.scheuber.io/am/Consumer/ECP/metaAlias/alpha/iSPAzure"/>
    </SPSSODescriptor>
</EntityDescriptor>

",
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull saml -f test/e2e/fr-config-manager-pull-config/saml.json -D testDir22": should export the saml based on salm-config.json file in fr-config-manager style": testDir22/realms/alpha/realm-config/saml/remote/microsoftOnline.json 1`] = `
{
  "config": {
    "_id": "dXJuOmZlZGVyYXRpb246TWljcm9zb2Z0T25saW5l",
    "_rev": "-901720656",
    "entityId": "urn:federation:MicrosoftOnline",
    "serviceProvider": {
      "advanced": {
        "idpProxy": {},
        "saeConfiguration": {},
        "treeConfiguration": {},
      },
      "assertionContent": {
        "basicAuthentication": {},
        "nameIdFormat": {
          "nameIdFormatList": [
            "urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddress",
            "urn:mace:shibboleth:1.0:nameIdentifier",
            "urn:oasis:names:tc:SAML:1.1:nameid-format:unspecified",
            "urn:oasis:names:tc:SAML:2.0:nameid-format:transient",
            "urn:oasis:names:tc:SAML:2.0:nameid-format:persistent",
          ],
        },
        "secrets": {},
        "signingAndEncryption": {
          "encryption": {},
          "requestResponseSigning": {
            "assertion": true,
          },
          "secretIdAndAlgorithms": {},
        },
      },
      "assertionProcessing": {
        "accountMapper": {},
        "attributeMapper": {
          "attributeMap": [
            {
              "binary": false,
              "localAttribute": "mail",
              "samlAttribute": "IDPEmail",
            },
            {
              "binary": false,
              "localAttribute": "UOPClassID",
              "samlAttribute": "UOPClassID",
            },
          ],
        },
        "responseArtifactMessageEncoding": {
          "encoding": "URI",
        },
      },
      "services": {
        "serviceAttributes": {
          "assertionConsumerService": [
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST",
              "index": 0,
              "isDefault": true,
              "location": "https://login.microsoftonline.com/login.srf",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST-SimpleSign",
              "index": 1,
              "isDefault": false,
              "location": "https://login.microsoftonline.com/login.srf",
            },
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:PAOS",
              "index": 2,
              "isDefault": false,
              "location": "https://login.microsoftonline.com/login.srf",
            },
          ],
          "singleLogoutService": [
            {
              "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST",
              "location": "https://login.microsoftonline.com/login.srf",
            },
          ],
        },
      },
    },
  },
  "metadata": "<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
<EntityDescriptor entityID="urn:federation:MicrosoftOnline" ID="_e46a1193-e8a7-48ed-804f-1516729ecb5f" xmlns="urn:oasis:names:tc:SAML:2.0:metadata" xmlns:query="urn:oasis:names:tc:SAML:metadata:ext:query" xmlns:mdattr="urn:oasis:names:tc:SAML:metadata:attribute" xmlns:saml="urn:oasis:names:tc:SAML:2.0:assertion" xmlns:xenc="http://www.w3.org/2001/04/xmlenc#" xmlns:xenc11="http://www.w3.org/2009/xmlenc11#" xmlns:alg="urn:oasis:names:tc:SAML:metadata:algsupport" xmlns:x509qry="urn:oasis:names:tc:SAML:metadata:X509:query" xmlns:ds="http://www.w3.org/2000/09/xmldsig#">
    <Extensions>
        <alg:DigestMethod Algorithm="http://www.w3.org/2000/09/xmldsig#sha1"/>
        <alg:SigningMethod Algorithm="http://www.w3.org/2000/09/xmldsig#rsa-sha1"/>
    </Extensions>
    <SPSSODescriptor WantAssertionsSigned="true" protocolSupportEnumeration="urn:oasis:names:tc:SAML:2.0:protocol">
        <KeyDescriptor use="signing">
            <ds:KeyInfo>
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                <ds:X509Data>
                    <ds:X509Certificate>PGNlcnRpZmljYXRlPg==</ds:X509Certificate>
                </ds:X509Data>
            </ds:KeyInfo>
        </KeyDescriptor>
        <KeyDescriptor use="signing">
            <ds:KeyInfo>
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                <ds:X509Data>
                    <ds:X509Certificate>PGNlcnRpZmljYXRlPg==</ds:X509Certificate>
                </ds:X509Data>
            </ds:KeyInfo>
        </KeyDescriptor>
        <KeyDescriptor use="signing">
            <ds:KeyInfo>
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                
                <ds:X509Data>
                    <ds:X509Certificate>PGNlcnRpZmljYXRlPg==</ds:X509Certificate>
                </ds:X509Data>
            </ds:KeyInfo>
        </KeyDescriptor>
        <SingleLogoutService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST" Location="https://login.microsoftonline.com/login.srf"/>
        <NameIDFormat>urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddress</NameIDFormat>
        <NameIDFormat>urn:mace:shibboleth:1.0:nameIdentifier</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:1.1:nameid-format:unspecified</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:2.0:nameid-format:transient</NameIDFormat>
        <NameIDFormat>urn:oasis:names:tc:SAML:2.0:nameid-format:persistent</NameIDFormat>
        <AssertionConsumerService index="0" isDefault="true" Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST" Location="https://login.microsoftonline.com/login.srf"/>
        <AssertionConsumerService index="1" isDefault="false" Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST-SimpleSign" Location="https://login.microsoftonline.com/login.srf"/>
        <AssertionConsumerService index="2" isDefault="false" Binding="urn:oasis:names:tc:SAML:2.0:bindings:PAOS" Location="https://login.microsoftonline.com/login.srf"/>
    </SPSSODescriptor>
</EntityDescriptor>

",
}
`;
